--- a/Writing & Literature/Writting Code/Writing_Thesis_27.12.21.Rmd
+++ b/Writing & Literature/Writting Code/Writing_Thesis_27.12.21.Rmd
@@ -18,6 +18,9 @@ link-citations: yes
 
 ### Check List
 
+* Lable tables and graphics
+* Make relationship to Louisiana clear
+* Use one person (I, or me, or we)
 * Check section numbering
 * Spell check
 * Use same term for corona the whole way through
@@ -33,8 +36,11 @@ Under construction
 <br>
 
 ### Abstract
-
 Under construction
+
+The purpose of this thesis is to understand the economic impact the Covid-19 crisis had on housing prices and how these impacts changed the relative demand of homeowners for certain hedonic features of a home using Louisiana, USA market data. To determine which variables would be important to analyze, an *eXtreme Gradient Boost* (XGBoost) machine learning algorithm was trained on a large (i.e. $104\times24412$) dataset of hedonic features. An analysis of the XGBoost's variable-importance ranking shows that number of bedrooms, city centrality, total living area, age, and days on the market were among the top most important variables in determine a homes market price. Therefore, a deeper dive into how the crisis impacted the relative demand for these features is critically important in understanding the bigger picture of Covid-19's impact on the housing market.
+
+A panel of analysis shows that Covid-19, measured by the daily 3-month moving average of official infections at the time of sale, significantly increased average home prices by *8.97 USD* per additional daily infection. This finding establishes the corona-specific reaction of housing market prices to daily infections. When analyzing how this price shift is explained by specific demand for certain property characteristics, I find: the premiums for each level of number of bedrooms is significantly increased in response to daily infections, with an average increase of *32, 37, 27, and 47 USD* per additional daily infection for levels 2-through-5 bedrooms respectively; the premimum for being central to a city increased by *5.17 USD* per daily infection while properties located outside the city were not significantly impacted by daily infections; premiums for home size increased by *0.02 USD* per daily infection, with the premium for the smallest homes being significantly decreased by *3.15 USD* per daily infection; premiums for property age, which are historically negative, decreased even further with the penalty for each additional year of age increasing by *0.06 USD* per daily infections with the oldest homes experiencing the largest loss of *2.75 USD* per daily infection, per year of age and; an increase in the penalty for each additional day a home sits on the market of *0.04 USD* per daily infection with homes sitting the longest period of time on the market experiencing the largest loss of *2.75* per daily infection, per day.
 
 <br>
 
@@ -140,24 +146,9 @@ Changes in housing market demand for specific property types and features [@Taja
 
 Potential changes in housing preferences due to the COVID-19 pandemic and highlight the challenges for policy making [@Nanda]
 
-
-
-<br>
-
-**Tonia Notes:**
-
-* Add multiple sources on some citations
-* Add real estate market during the crisis
-* Break into subsections from widest to most specific
-   + Make last subsection specific to this thesis, quoting sources and their findings
-* Meta analysis is good
-
-
-
 <br><br>
 
 ### 3. Data 
-
 #### 3.1 Data Collection
 
 The utilization of Big Data collected through a data-mining process called *web-scrapping* has increasingly become the method of choice for researchers across disciplines. The term web-scrapping simply refers to the process of collecting structured data from websites using algorithms to automate the collection process. Methods similar to ones I have implemented in this thesis have been used by established authors such as **Borde et al., Pérez-Rave et al. and Berawi et al.** 
@@ -658,7 +649,7 @@ Partial dependency plots (PDP) shows relationship, or dependence, between the mo
 <br><br>
 
 ### 6. Results
-This section will follow a clear and consistent structure for each set of results. Each hypothesis will have: A *summary of the finding*; *feature review* of the characteristic being modeled; and *model results* from the OLS and ML models with standard hypothesis conclusion(s). 
+This section will follow a consistent structure for each set of results. Each hypothesis will have: A *summary of the finding*; *feature review* of the characteristic being modeled; and *model results* from the OLS and ML models with standard hypothesis conclusion(s). 
 
 <br>
 
@@ -1067,9 +1058,11 @@ Note: Provide an outlook of the future developments of the particular scientific
 ### 8. Conclusion
 Under construction
 
-The primary objective of this thesis is to understand the economic impact the Covid-19 crisis had on housing prices and how these socioeconomic impacts changed the relative demand for certain hedonic features of a home. The XGBoost machine learning model ranked the 
+The purpose of this thesis is to understand the economic impact the Covid-19 crisis had on housing prices and how these impacts changed the relative demand of homeowners for certain hedonic features of a home using Louisiana, USA market data. To determine which variables would be important to analyze, an *eXtreme Gradient Boost* (XGBoost) machine learning algorithm was trained on a large (i.e. $104\times24412$) dataset of hedonic features. An analysis of the XGBoost's variable-importance ranking shows that number of bedrooms, city centrality, total living area, age, and days on the market were among the top most important variables in determine a homes market price. Therefore, a deeper dive into how the crisis impacted the relative demand for these features is critically important in understanding the bigger picture of Covid-19's impact on the housing market.
 
-What the thesis is about
+A panel of analysis shows that Covid-19, measured by the daily 3-month moving average of official infections at the time of sale, significantly increased average home prices by *8.97 USD* per additional daily infection. This finding establishes the corona-specific reaction of housing market prices to daily infections. When analyzing how this price shift is explained by specific demand for certain property characteristics, I find: the premiums for each level of number of bedrooms is significantly increased in response to daily infections, with an average increase of *32, 37, 27, and 47 USD* per additional daily infection for levels 2-through-5 bedrooms respectively; the premimum for being central to a city increased by *5.17 USD* per daily infection while properties located outside the city were not significantly impacted by daily infections; premiums for home size increased by *0.02 USD* per daily infection, with the premium for the smallest homes being significantly decreased by *3.15 USD* per daily infection; premiums for property age, which are historically negative, decreased even further with the penalty for each additional year of age increasing by *0.06 USD* per daily infections with the oldest homes experiencing the largest loss of *2.75 USD* per daily infection, per year of age and; an increase in the penalty for each additional day a home sits on the market of *0.04 USD* per daily infection with homes sitting the longest period of time on the market experiencing the largest loss of *2.75* per daily infection, per day.
+
+These findings describe the ideal home to own during the crisis is a newly built, 3,000 sqft. of living area, 5-bedroom house centrally located to the nearest city which is sold in 0 days once made publicly available for sale.
 
 
 
@@ -1090,15 +1083,6 @@ Call to action
 ### 9. Appendix
 
 <br><br>
-
-
-
-
-
-#### Helpful Notes
-
-
-
 
 <br><br><br>
 
